--- a/ProjetoGenesis-Front/calculoCDB_Angular/src/app/app.component.html
+++ b/ProjetoGenesis-Front/calculoCDB_Angular/src/app/app.component.html
@@ -1,12 +1,3 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
 <style>
   :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -314,23 +305,40 @@
 <div class="content" role="main">
   <!-- Resources -->
   <h2>Calcular CDB</h2>
-  <p>
-  <form (submit)="$event.preventDefault()" style="width: 400px;">
+  <form [formGroup]="angForm" (submit)="$event.preventDefault()" style="width: 400px;">
 
 
     <p><label>
-        <input type="number" min="1" ng-pattern="/^[1-9][0-9]*$/" Style="width: 100%;"
-          placeholder="Valor monetário positivo" autofocus #customerInput>{{customerInput.value}}
-      </label></p>
-    <br>
-    <p>
-      <label>
-        <input ng-pattern="/^[1-9][0-9]*$/" min="2" max="12" maxlength="2" Style="width: 100%;" type='number'
-          placeholder="Prazo em meses maior que 1(um) para resgate da aplicação"
-          #customerInput2>{{customerInput2.value}}
+        <input required type="number" name="Valor" min="1" formControlName="Valor" ng-pattern="/^[1-9][0-9]*$/"
+          Style="width: 100%;" placeholder="Valor monetário positivo" autofocus #customerInput>
       </label>
     </p>
     <br>
-    <button mat-raised-button style="width: 100%">Calcular</button>
+    <p>
+      <label>
+        <input required ng-pattern="/^[1-9][0-9]*$/" min="2" name="Prazo" formControlName="Prazo" maxlength=" 2"
+          Style="width: 100%;" type='number' placeholder="Prazo em meses maior que 1(um) para resgate da aplicação"
+          #customerInput2>
+      </label>
+    </p>
+    <br>
+    <button (click)="calcularSoma()" mat-raised-button style="width: 80%">Calcular</button>
+    <br>
   </form>
+
+
+  <div style="font-size: xx-small;">
+    <p>Para cálculo do imposto utilizar a seguinte tabela:</p>
+    <p>i. Até 06 meses: 22,5%</p>
+    <p>ii. Até 12 meses: 20%</p>
+    <p>iii. Até 24 meses 17,5%</p>
+    <p>iv. Acima de 24 meses 15%</p>
+    <p>valores fixos:</p>
+    <p>i. TB – 108%</p>
+    <p>ii. CDI – 0,9%</p>
+  </div>
+  <h3>Resultado bruto e o resultado líquido do investimento:</h3>
+  <P>Resultado Bruto: <b>{{this.resultadoBruto}}</b></P>
+  <P>Resultado Líquido: <b>{{this.resultadoLiquido}}</b></P>
+  <P>Imposto: <b>{{this.imposto}}</b></P>
 </div>
